--- a/src/crossword.tex
+++ b/src/crossword.tex
@@ -21,8 +21,8 @@
 % Parameter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Values can be changed, but rarely improve the result
-\def\fieldWidth{11}
-\def\fieldHeight{\fieldWidth}
+\def\boardWidth{11}
+\def\boardHeight{\boardWidth}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Javascript
@@ -34,12 +34,12 @@ character. Usually the connected character build a word. When hovering over the 
 is shown, indicating which word should be entered into a row or column.";
 
 % Outside variables
-const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
-const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
+const BOARD_WIDTH = AFMakeNumber(\boardWidth);
+const BOARD_HEIGHT = AFMakeNumber(\boardHeight);
 const SCREEN_TEXT_SIZE = 300;
 % Maximum amount of words in the puzzle
 % OBACHT: This count is not very accurate, since the random length of the words highly
-% influence how many words can be placed onto the field.
+% influence how many words can be placed onto the board.
 var wordCount = 10;
 
 % Constants
@@ -58,8 +58,8 @@ var ORIENTATIONS = [
 ]
 
 % Globals
-% The game- and the solution field
-var complField = new Array();
+% The game- and the solution array
+var complBoard = new Array();
 var solution = new Array();
 
 % Color data
@@ -135,15 +135,15 @@ function initialise() {
     % Init the GUI
     initialiseButtons();
 
-    % Create an empty field
-    for (var m = 0; m < FIELD_HEIGHT; m++) {
+    % Create an empty board
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
         var row = new Array();
         var solRow = new Array();
-        for (var n = 0; n < FIELD_WIDTH; n++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
             row.push(EMPTY);
             solRow.push(EMPTY);
         }
-        complField.push(row);
+        complBoard.push(row);
         solution.push(solRow);
     }
 
@@ -156,7 +156,7 @@ function initialise() {
         wordList.push(tmp);
     }
 
-    createField();
+    createBoard();
     % Hide unused cells
     drawAndHideAll();
 }
@@ -180,12 +180,12 @@ function initialiseButtons() {
     % Each cell needs to be connected to an input and a hover function
     var cell;
     var funcName = "cellClicked";
-    for (var m = 0; m < FIELD_HEIGHT; m++) {
-        for (var n = 0; n < FIELD_WIDTH; n++) {
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
             var callbackName = funcName + "(" + m.toString() + "," + n.toString() + ");";
             cell = this.getField("cell" + m + "-" + n);
             cell.setAction("OnBlur", callbackName);
-            cell.textSize = SCREEN_TEXT_SIZE / Math.max(FIELD_HEIGHT, FIELD_WIDTH);
+            cell.textSize = SCREEN_TEXT_SIZE / Math.max(BOARD_HEIGHT, BOARD_WIDTH);
             cell.charLimit = 1;
 
             % Add hover callbacks to cells
@@ -199,7 +199,7 @@ function initialiseButtons() {
 
     % The overlay used for the hint
     var overlay = this.getField("overlay");
-    overlay.textSize = SCREEN_TEXT_SIZE / Math.max(FIELD_HEIGHT, FIELD_WIDTH);
+    overlay.textSize = SCREEN_TEXT_SIZE / Math.max(BOARD_HEIGHT, BOARD_WIDTH);
     overlay.textColor = color.white;
     overlay.fillColor = color.black;
 
@@ -228,11 +228,11 @@ function restart() {
         ];
     }
 
-    % Reset both fields
-    for (var m = 0; m < FIELD_HEIGHT; m++) {
-        for (var n = 0; n < FIELD_WIDTH; n++) {
+    % Reset both boards
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
             solution[m][n] = EMPTY;
-            complField[m][n] = EMPTY;
+            complBoard[m][n] = EMPTY;
         }
     }
 
@@ -253,8 +253,8 @@ function restart() {
 
     % Reset the words to be found
     curWords = [];
-    % Create the field, by creating a solution and a list of current words
-    createField();
+    % Create the board, by creating a solution and a list of current words
+    createBoard();
 
     % Disable highlight and refresh rendering
     highlightAll(color.gray);
@@ -296,20 +296,20 @@ function tooltip(on) {
 }
 
 %%%%%%%%%%%%%%%%%%
-% Field creation %
+% Board creation %
 % https://stackoverflow.com/questions/943113/algorithm-to-generate-a-crossword
 %%%%%%%%%%%%%%%%%%
 /**
- * Creates a field, by adding words from the word list to the solution array when possible.
+ * Creates a board, by adding words from the word list to the solution array when possible.
  * This is determined by checking all already placed characters for intersections
  * with each available word.
  * The words character positions are also saved inside another array.
  */
-function createField() {
+function createBoard() {
     % Create list of random length
     var lengthList = [];
     for (var i = 0; i < wordCount; i++) {
-        var len = getRandomInt(Math.min(FIELD_WIDTH, FIELD_HEIGHT) - 1);
+        var len = getRandomInt(Math.min(BOARD_WIDTH, BOARD_HEIGHT) - 1);
         lengthList.push(len);
     }
     % Sort length list
@@ -329,12 +329,12 @@ function createField() {
 
         % TODO
         % If is is the first word, place its center letter
-        % in the middle of the field
+        % in the middle of the board
         if (i == 0) {
             var center = Math.floor(word.length / 2.0);
             var oriIdx = getRandomInt(ORIENTATIONS.length);
-            var m = Math.floor(FIELD_HEIGHT * 0.5);
-            var n = Math.floor(FIELD_WIDTH * 0.5);
+            var m = Math.floor(BOARD_HEIGHT * 0.5);
+            var n = Math.floor(BOARD_WIDTH * 0.5);
             var charPos = word.charAt(center).charCodeAt() - 65;
             charPositions[charPos].push([m, n, oriIdx]);
         }
@@ -409,7 +409,7 @@ function addWord(word) {
     var wordCoords = [];
     wordCoords.push([m, n]);
     % Place the start icon and the index of the word
-    complField[m][n] = SYMBOLS[posInfo[ORI_IDX]];
+    complBoard[m][n] = SYMBOLS[posInfo[ORI_IDX]];
     solution[m][n] = curWords.length;
 
     % Iterate all chars and add them to the solution
@@ -432,7 +432,7 @@ function addWord(word) {
 /**
  * Tests if the given word has any valid positions at which to be placed.
  * For this each character of the word is iterated checking if this character
- * can be found on the field.
+ * can be found on the board.
  * Select a position if placing the word there would not be out of bounds and
  * would not collide with other words. All options are tested, while the one
  * having the most occurrences is chossen.
@@ -512,7 +512,7 @@ function checkCollisionAndOOB(word, posInfo) {
     % Test the cell infront of the word (for the orientation symbol)
     var tmpM = m - ori[M];
     var tmpN = n - ori[N];
-    if (tmpN >= 0 && tmpN < FIELD_WIDTH && tmpM >= 0 & tmpM < FIELD_HEIGHT) {
+    if (tmpN >= 0 && tmpN < BOARD_WIDTH && tmpM >= 0 & tmpM < BOARD_HEIGHT) {
         if (solution[tmpM][tmpN] != EMPTY) {
             return false;
         }
@@ -523,7 +523,7 @@ function checkCollisionAndOOB(word, posInfo) {
 
     for (var l = 0; l < word.length; l++) {
         % OOB
-        if (n < 0 || n >= FIELD_WIDTH || m < 0 || m >= FIELD_HEIGHT) {
+        if (n < 0 || n >= BOARD_WIDTH || m < 0 || m >= BOARD_HEIGHT) {
             return false;
         }
         % Collision
@@ -542,7 +542,7 @@ function checkCollisionAndOOB(word, posInfo) {
     }
 
     % Test the cell behind the word (no OOB test)
-    if (n >= 0 && n < FIELD_WIDTH && m >= 0 & m < FIELD_HEIGHT) {
+    if (n >= 0 && n < BOARD_WIDTH && m >= 0 & m < BOARD_HEIGHT) {
         if (solution[m][n] != EMPTY) {
             return false;
         }
@@ -568,13 +568,13 @@ function checkNeighbourhood(m, n, oriIdx) {
     var neigh2N = n - neighOri[N];
 
     % Ignore OOB
-    if (neigh1N >= 0 && neigh1N < FIELD_WIDTH && neigh1M >= 0 && neigh1M < FIELD_HEIGHT) {
+    if (neigh1N >= 0 && neigh1N < BOARD_WIDTH && neigh1M >= 0 && neigh1M < BOARD_HEIGHT) {
         % If non empty return false
         if (solution[neigh1M][neigh1N] != EMPTY) {
             return false;
         }
     }
-    if (neigh2N >= 0 && neigh2N < FIELD_WIDTH && neigh2M >= 0 && neigh2M < FIELD_HEIGHT) {
+    if (neigh2N >= 0 && neigh2N < BOARD_WIDTH && neigh2M >= 0 && neigh2M < BOARD_HEIGHT) {
         if (solution[neigh2M][neigh2N] != EMPTY) {
             return false;
         }
@@ -586,7 +586,7 @@ function checkNeighbourhood(m, n, oriIdx) {
 % Gamelogic %
 %%%%%%%%%%%%%
 /**
- * Assignes the current cell value to the complField array.
+ * Assignes the current cell value to the complBoard array.
  * Used for updating the array after an input (OnBlur event).
  * @param {Number} m The row index.
  * @param {Number} n The column index.
@@ -594,25 +594,25 @@ function checkNeighbourhood(m, n, oriIdx) {
 function cellClicked(m, n) {
     var cell = this.getField("cell" + m + "-" + n);
     % Revert changes to the arrow cells
-    if (complField[m][n] > "Z") {
-        cell.value = complField[m][n];
+    if (complBoard[m][n] > "Z") {
+        cell.value = complBoard[m][n];
     } else {
         % Convert to uppercase
         if ("a" <= cell.value && cell.value <= "z") {
             cell.value = cell.value.toUpperCase();
-            complField[m][n] = cell.value;
+            complBoard[m][n] = cell.value;
         } else if ("A" <= cell.value && cell.value <= "Z") {
-            complField[m][n] = cell.value;
+            complBoard[m][n] = cell.value;
         } else {
             % If the input was not a letter remove the symbol
             cell.value = "";
-            complField[m][n] = EMPTY;
+            complBoard[m][n] = EMPTY;
         }
     }
 }
 
 /**
- * Check the complete field for correct or incorrect inputs
+ * Check the complete board for correct or incorrect inputs
  * and mark these correspondingly. Only complete words are marked.
  * Indicate when the game is over.
  */
@@ -629,7 +629,7 @@ function checkAll() {
             m = curWords[w][c][M];
             n = curWords[w][c][N];
 
-            if (solution[m][n] != complField[m][n]) {
+            if (solution[m][n] != complBoard[m][n]) {
                 wordComplete = false;
                 gameover = false;
             }
@@ -666,7 +666,7 @@ function checkAll() {
  * @param {Number} n The column index.
  */
 function showHint(m, n) {
-    if (complField[m][n] > "Z") {
+    if (complBoard[m][n] > "Z") {
         const START = 1;
         var wIdx = solution[m][n];
 
@@ -710,7 +710,7 @@ function showHint(m, n) {
  */
 function hideHint(m, n) {
     % Ensure arrow cell
-    if (complField[m][n] > "Z") {
+    if (complBoard[m][n] > "Z") {
         % Just hide the overlayfield, no need to adjust it
         var overlay = this.getField("overlay");
         overlay.hidden = true;
@@ -749,8 +749,8 @@ function getHintText(wIdx) {
  * Draw all cells.
  */
 function drawAndHideAll() {
-    for (var m = 0; m < FIELD_HEIGHT; m++) {
-        for (var n = 0; n < FIELD_WIDTH; n++) {
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
             % Redraw only if not hidden
             if (!hide(m, n)) {
                 draw(m, n);
@@ -770,12 +770,12 @@ function draw(m, n) {
     var cell = this.getField("cell" + m + "-" + n);
     cell.delay = true;
     % Bigger than "z" are the arrows
-    if (complField[m][n] > "Z") {
-        cell.value = complField[m][n];
+    if (complBoard[m][n] > "Z") {
+        cell.value = complBoard[m][n];
         cell.textColor = color.white;
         cell.fillColor = color.black;
-    } else if (complField[m][n] != EMPTY) {
-        cell.value = complField[m][n];
+    } else if (complBoard[m][n] != EMPTY) {
+        cell.value = complBoard[m][n];
         cell.textColor = color.black;
         cell.fillColor = color.white;
     } else {
@@ -810,8 +810,8 @@ function hide(m, n) {
  * @param {Array} color The color array.
  */
 function highlightAll(color) {
-    for (var m = 0; m < FIELD_HEIGHT; m++) {
-        for (var n = 0; n < FIELD_WIDTH; n++) {
+    for (var m = 0; m < BOARD_HEIGHT; m++) {
+        for (var n = 0; n < BOARD_WIDTH; n++) {
             highlight(m, n, color);
         }
     }
@@ -868,29 +868,29 @@ function printInfoText(text) {
         \end{multicols}
 
         % Dynamically adjust the cell width and height to the number of cells
-        % Calculate the max width and height of a block
-        \FPeval{\resultW}{(\fieldWidth * 3 - 2)} % chktex 8
-        \def\blocksizeW{\dimexpr (\linewidth-\resultW pt)/\fieldWidth \relax}
+        % Calculate the max width and height of a cell
+        \FPeval{\resultW}{\boardWidth * 3 - 2} % chktex 8
+        \def\cellWidth{\dimexpr (\linewidth-\resultW pt)/\boardWidth \relax}
 
-        \FPeval{\resultH}{(\fieldHeight * 3 + 3)}
-        \def\blocksizeH{\dimexpr (500 pt -\resultH pt)/\fieldHeight \relax}
+        \FPeval{\resultH}{\boardHeight * 3 + 3}
+        \def\cellHeight{\dimexpr (500 pt -\resultH pt)/\boardHeight \relax}
 
         % The game board
         \begin{tcolorbox}
-            % Define the cellsize via the smaller amount
+            % Define the cell size via the smaller amount
             % Must be done here so the \linewidth has the correct value
-            \ifdim\blocksizeW<\blocksizeH
-                \def\blocksize{\blocksizeW}
+            \ifdim\cellWidth<\cellHeight
+                \def\cellsize{\cellWidth}
             \else
-                \def\blocksize{\blocksizeH}
+                \def\cellsize{\cellHeight}
             \fi
 
             \begin{center}
                 \tiny
-                \xintFor* #1 in {\xintSeq{0}{\fieldHeight-1}} \do {%
-                    \xintFor* #2 in {\xintSeq{0}{\fieldWidth-1}} \do {%
+                \xintFor* #1 in {\xintSeq{0}{\boardHeight-1}} \do {%
+                    \xintFor* #2 in {\xintSeq{0}{\boardWidth-1}} \do {%
                         \TextField[%
-                            name=cell#1-#2, width=\blocksize, height=\blocksize,%
+                            name=cell#1-#2, width=\cellsize, height=\cellsize,%
                             bordercolor=gray, align=1%
                         ]{}%
                         \xintifForLast{}{\hspace{3pt}}%
@@ -923,7 +923,7 @@ function printInfoText(text) {
                         {Directions: \strut}{2, 4}
                     \ChoiceMenu[name=cmWords, bordercolor=gray, width=1.5cm, combo]
                         {Words: \strut}{5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15}
-                \end{tcolorbox}\\[-0.5cm]
+                \end{tcolorbox}\\[-0.3cm]
                 \PushButton[name=checkall, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
